Added check to see if music changes